<resources>
    <string name="app_name">TheMovies</string>
    <string name="tab_text_1">Movies</string>
    <string name="tab_text_2">Tv Shows</string>
    <string name="title_activity_details">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
...
