...
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tv_overviewValue"
                app:layout_constraintTop_toBottomOf="@+id/tv_overviewValue" />

            <TextView
                android:id="@+id/tv_budgetValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/budget_value"
                app:layout_constraintStart_toStartOf="@+id/tv_budget"
                app:layout_constraintTop_toBottomOf="@+id/tv_budget" />
...
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tv_budgetValue"
                app:layout_constraintTop_toBottomOf="@+id/tv_budgetValue" />

            <TextView
                android:id="@+id/tv_runtimeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/runtime_value"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/tv_runtime"
...
